removed XMLSEC_OPENSSL096 from main library

--- a/src/openssl/Makefile.am
+++ b/src/openssl/Makefile.am
@@ -3,6 +3,7 @@ NULL =
 INCLUDES = \
 -I$(top_srcdir) \
 -I$(top_srcdir)/include \
+$(XMLSEC_OPENSSL_DEFINES) \
 $(OPENSSL_CFLAGS) \
 $(LIBXSLT_CFLAGS) \
 $(LIBXML_CFLAGS) \
