--- a/configure.in
+++ b/configure.in
@@ -145,6 +145,7 @@ dnl ==========================================================================
 ac_openssl_lib_dir="/usr/lib /usr/local/lib /usr/local /usr/local/ssl /usr/local/ssl/lib /usr/pkg"
 ac_openssl_inc_dir="/usr/include /usr/local/include /usr/local /usr/local/ssl /usr/pkg /usr/local/ssl/include"
 
+XMLSEC_OPENSSL_DEFINES=""
 OPENSSL_WITHOUT="no"
 OPENSSL_MIN_VERSION="0.9.6"
 OPENSSL_VERSION=""
@@ -221,7 +222,7 @@ else
 	OPENSSL_VERSION="0.9.7"
     ],[
 	OPENSSL_VERSION="0.9.6"
-	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_OPENSSL096=1"
+	XMLSEC_OPENSSL_DEFINES="$XMLSEC_OPENSSL_DEFINES -DXMLSEC_OPENSSL_096=1"
     ])    
     CPPFLAGS=$OLD_CPPFLAGS
     if test "z$XMLSEC_CRYPTO" = "z"
@@ -238,6 +239,7 @@ AC_SUBST(OPENSSL_PREFIX)
 AC_SUBST(OPENSSL_CFLAGS)
 AC_SUBST(OPENSSL_LIBS)
 AC_SUBST(OPENSSL_LDADDS)
+AC_SUBST(XMLSEC_OPENSSL_DEFINES)
 
 dnl ==========================================================================
 dnl See do we need SHA1 suport
