--- a/include/xmlsec/Makefile.am
+++ b/include/xmlsec/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = openssl
+SUBDIRS = $(XMLSEC_CRYPTO_LIST)
 
 xmlsecincdir = $(includedir)/xmlsec
 
