--- a/configure.in
+++ b/configure.in
@@ -8,7 +8,6 @@ XMLSEC_VERSION=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMI
 VERSION=$XMLSEC_VERSION
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
 
-XMLSEC_CRYPTO=""
 
 AC_SUBST(XMLSEC_VERSION)
 AC_SUBST(XMLSEC_VERSION_MAJOR)
@@ -48,6 +47,8 @@ AC_CHECK_FUNCS(printf sprintf fprintf snprintf vfprintf vsprintf vsnprintf sscan
 
 
 XMLSEC_DEFINES=""
+XMLSEC_CRYPTO=""
+XMLSEC_CRYPTO_LIST=""
 
 dnl ==========================================================================
 dnl find libxml
@@ -148,7 +149,7 @@ ac_openssl_lib_dir="/usr/lib /usr/local/lib /usr/local /usr/local/ssl /usr/local
 ac_openssl_inc_dir="/usr/include /usr/local/include /usr/local /usr/local/ssl /usr/pkg /usr/local/ssl/include"
 
 XMLSEC_OPENSSL_DEFINES=""
-OPENSSL_WITHOUT="no"
+OPENSSL_WITHOUT="yes"
 OPENSSL_MIN_VERSION="0.9.6"
 OPENSSL_VERSION=""
 OPENSSL_PREFIX=""
@@ -166,6 +167,8 @@ else
 	OPENSSL_CFLAGS="-I$OPENSSL_PREFIX/include"
 	OPENSSL_LIBS="-L$OPENSSL_PREFIX/lib -lcrypto"
 	OPENSSL_LDADDS="$OPENSSL_PREFIX/lib/libcrypto.a"
+	OPENSSL_INCLUDES_FOUND="yes"
+	OPENSSL_LIBS_FOUND="yes"
     else
 	OPENSSL_INCLUDES_FOUND="no"
 	OPENSSL_LIBS_FOUND="no"
@@ -196,42 +199,46 @@ else
 		break;
 	    fi
 	done
-	if test "$OPENSSL_INCLUDES_FOUND" = "no" -o "$OPENSSL_LIBS_FOUND" = "no" ;
-	then
-	    AC_MSG_ERROR(openssl is required for $PACKAGE)
-	fi
     fi
     
-    dnl Check the OpenSSL version    
-    OLD_CPPFLAGS=$CPPFLAGS
-    CPPFLAGS="$OPENSSL_CFLAGS"
-    AC_EGREP_CPP(yes,[
-	#include <openssl/opensslv.h>
-	#if OPENSSL_VERSION_NUMBER >= 0x00906000L
-	    yes
-	#endif
-    ],[
-	OPENSSL_VERSION="0.9.6"
-    ],[
-        AC_MSG_ERROR(You need at least OpenSSL 0.9.6 for this version of $PACKAGE)
-    ]) 
-    AC_EGREP_CPP(yes,[
-	#include <openssl/opensslv.h>
-	#if OPENSSL_VERSION_NUMBER >= 0x00907000L
-	    yes
-	#endif
-    ],[
-	OPENSSL_VERSION="0.9.7"
-    ],[
-	OPENSSL_VERSION="0.9.6"
-	XMLSEC_OPENSSL_DEFINES="$XMLSEC_OPENSSL_DEFINES -DXMLSEC_OPENSSL_096=1"
-    ])    
-    CPPFLAGS=$OLD_CPPFLAGS
-    if test "z$XMLSEC_CRYPTO" = "z"
+    if test "$OPENSSL_INCLUDES_FOUND" = "yes" -a "$OPENSSL_LIBS_FOUND" = "yes" ;
     then
-	XMLSEC_CRYPTO="openssl"
+	dnl Check the OpenSSL version    
+	OLD_CPPFLAGS=$CPPFLAGS
+	CPPFLAGS="$OPENSSL_CFLAGS"
+	AC_EGREP_CPP(yes,[
+	    #include <openssl/opensslv.h>
+	    #if OPENSSL_VERSION_NUMBER >= 0x00906000L
+		yes
+	    #endif
+	],[
+	    OPENSSL_VERSION="0.9.6"
+	],[
+    	    AC_MSG_ERROR(You need at least OpenSSL 0.9.6 for this version of $PACKAGE)
+	]) 
+	AC_EGREP_CPP(yes,[
+	    #include <openssl/opensslv.h>
+	    #if OPENSSL_VERSION_NUMBER >= 0x00907000L
+		yes
+	    #endif
+	],[
+	    OPENSSL_VERSION="0.9.7"
+	],[
+	    OPENSSL_VERSION="0.9.6"
+	    XMLSEC_OPENSSL_DEFINES="$XMLSEC_OPENSSL_DEFINES -DXMLSEC_OPENSSL_096=1"
+	])    
+	CPPFLAGS=$OLD_CPPFLAGS
+	if test "z$XMLSEC_CRYPTO" = "z"
+	then
+	    XMLSEC_CRYPTO="openssl"
+	fi
+	
+	OPENSSL_WITHOUT="no"
+	XMLSEC_CRYPTO_LIST="$XMLSEC_CRYPTO_LIST openssl"
+        AC_MSG_RESULT(yes ('$OPENSSL_VERSION'))
+    else
+        AC_MSG_RESULT(no)
     fi
-    AC_MSG_RESULT(yes ('$OPENSSL_VERSION' ))
 fi
 AC_SUBST(OPENSSL_WITHOUT)
 AC_SUBST(OPENSSL_MIN_VERSION)
@@ -242,6 +249,106 @@ AC_SUBST(OPENSSL_CFLAGS)
 AC_SUBST(OPENSSL_LIBS)
 AC_SUBST(OPENSSL_LDADDS)
 AC_SUBST(XMLSEC_OPENSSL_DEFINES)
+
+dnl ==========================================================================
+dnl See if we can find NSS
+dnl ==========================================================================
+ac_mozilla_name=mozilla-1.2
+ac_nss_lib_dir="/usr/lib /usr/local/lib /usr/lib/$ac_mozilla_name /usr/local/lib/$ac_mozilla_name"
+ac_nss_inc_dir="/usr/include /usr/local/include /usr/include/$ac_mozilla_name /usr/local/include/$ac_mozilla_name"
+    
+XMLSEC_NSS_DEFINES=""
+NSS_WITHOUT="no"
+NSS_MIN_VERSION="3.6.0"
+NSS_VERSION=""
+NSS_PREFIX=""
+NSS_CFLAGS=""
+NSS_LIBS=""
+NSS_LDADDS=""
+NSS_LIBS_LIST="-lsoftokn3 -lnss3 -lnspr4 -lplds4 -lplc4"
+AC_MSG_CHECKING(for nss libraries >= $NSS_MIN_VERSION) 
+AC_ARG_WITH(nss, [  --with-nss=[PFX]    nss location])
+if test "$with_nss" = "no" ; then
+    NSS_WITHOUT="yes"
+    AC_MSG_RESULT(no)
+else
+    if test "$with_nss" != "" ; then
+	NSS_PREFIX=$with_nss
+	NSS_CFLAGS="-I$NSS_PREFIX/include"
+	NSS_LIBS="-L$NSS_PREFIX/lib $NSS_LIBS_LIST"
+	NSS_LDADDS="-L$NSS_PREFIX/lib $NSS_LIBS_LIST"
+	NSS_INCLUDES_FOUND="yes"
+	NSS_LIBS_FOUND="yes"
+    else
+	NSS_INCLUDES_FOUND="no"
+	NSS_LIBS_FOUND="no"
+	for dir in $ac_nss_inc_dir; do
+	    if test -f $dir/nss/nss.h; then
+		dnl do not add -I/usr/include because compiler does it anyway
+		if test "$dir" = "/usr/include" ; then
+		    NSS_CFLAGS=""
+		else
+		    NSS_CFLAGS="-I$dir"
+		fi
+		NSS_INCLUDES_FOUND="yes"
+		break
+	    fi
+	done
+
+	for dir in $ac_nss_lib_dir; do
+	    if test -f $dir/libnss3.so; then
+		dnl do not add -L/usr/lib because compiler does it anyway
+		if test "$dir" = "/usr/lib" ; then
+		    NSS_LIBS="-L$dir $NSS_LIBS_LIST"
+		    NSS_LDADDS="-L$dir $NSS_LIBS_LIST"
+		else
+		    NSS_LIBS="-L$dir $NSS_LIBS_LIST"
+		    NSS_LDADDS="-L$dir $NSS_LIBS_LIST"
+		fi
+		NSS_LIBS_FOUND="yes"
+		ac_found_nss_lib_dir=$dir
+		break;
+	    fi
+	done
+    fi
+    
+    if test "$NSS_INCLUDES_FOUND" = "yes" -a "$NSS_LIBS_FOUND" = "yes" ;
+    then
+	dnl Check the NSS version    
+	dnl todo: check the version
+    
+	if test "z$XMLSEC_CRYPTO" = "z"
+	then
+	    XMLSEC_CRYPTO="nss"
+	fi
+	XMLSEC_CRYPTO_LIST="$XMLSEC_CRYPTO_LIST nss"
+	AC_MSG_RESULT(yes ('$NSS_VERSION'))
+    else
+	AC_MSG_RESULT(no)
+    fi
+fi
+AC_SUBST(NSS_WITHOUT)
+AC_SUBST(NSS_MIN_VERSION)
+AC_SUBST(NSS_VERSION)
+AC_SUBST(NSS_CONFIG)	
+AC_SUBST(NSS_PREFIX)
+AC_SUBST(NSS_CFLAGS)
+AC_SUBST(NSS_LIBS)
+AC_SUBST(NSS_LDADDS)
+AC_SUBST(XMLSEC_NSS_DEFINES)
+
+
+dnl ==========================================================================
+dnl Do we have a crypto library?
+dnl ==========================================================================
+AC_MSG_CHECKING(for crypto library) 
+if test "z$XMLSEC_CRYPTO" = "z"
+then
+    AC_MSG_ERROR(At least one crypto library should exist for $PACKAGE)
+else
+    AC_MSG_RESULT(yes ('$XMLSEC_CRYPTO'))
+fi
+
 
 dnl ==========================================================================
 dnl See do we need SHA1 suport
@@ -459,13 +566,16 @@ AC_SUBST(LDFLAGS)
 AC_SUBST(XMLSEC_DEFINES)
 
 AM_CONDITIONAL(XMLSEC_CRYPTO_OPENSSL, test "$XMLSEC_CRYPTO" = "openssl" )
+AM_CONDITIONAL(XMLSEC_CRYPTO_NSS, test "$XMLSEC_CRYPTO" = "nss" )
 AC_SUBST(XMLSEC_CRYPTO)
+AC_SUBST(XMLSEC_CRYPTO_LIST)
 
 dnl ==========================================================================
 dnl Which files to process
 dnl ==========================================================================
 rm -f rm COPYING.LIB COPYING
 ln -s $srcdir/Copyright COPYING
+
 
 AC_OUTPUT([
 Makefile
@@ -476,9 +586,11 @@ xmlsec.pc
 include/Makefile
 include/xmlsec/Makefile
 include/xmlsec/openssl/Makefile
+include/xmlsec/nss/Makefile
 include/xmlsec/version.h
 src/Makefile
 src/openssl/Makefile
+src/nss/Makefile
 apps/Makefile
 tests/Makefile
 man/Makefile
