--- a/configure.in
+++ b/configure.in
@@ -265,7 +265,7 @@ NSS_PREFIX=""
 NSS_CFLAGS=""
 NSS_LIBS=""
 NSS_LDADDS=""
-NSS_LIBS_LIST="-lsoftokn3 -lnss3 -lnspr4 -lplds4 -lplc4"
+NSS_LIBS_LIST="-lnss3 -lnspr4 -lplds4 -lplc4"
 AC_MSG_CHECKING(for nss libraries >= $NSS_MIN_VERSION) 
 AC_ARG_WITH(nss, [  --with-nss=[PFX]    nss location])
 if test "$with_nss" = "no" ; then
