--- a/xmlsec.spec.in
+++ b/xmlsec.spec.in
@@ -37,6 +37,33 @@ Requires: zlib-devel
 Libraries, includes, etc. you can use to develop applications with XML Digital 
 Signatures and XML Encryption support.
 
+%package nss
+Summary: NSS crypto plugin for XML Security Library
+Group: Development/Libraries 
+Requires: xmlsec = %{version}
+Requires: libxml2 >= @LIBXML_MIN_VERSION@
+Requires: libxslt >= @LIBXSLT_MIN_VERSION@
+Requires: mozilla-nss >= @NSS_MIN_VERSION@
+
+%description nss
+NSS plugin for XML Security Library provides NSS based crypto services
+for the xmlsec library
+
+%package nss-devel
+Summary: NSS crypto plugin for XML Security Library
+Group: Development/Libraries 
+Requires: xmlsec = %{version}
+Requires: xmlsec-devel = %{version}
+Requires: xmlsec-nss = %{version}
+Requires: libxml2-devel >= @LIBXML_MIN_VERSION@
+Requires: libxslt-devel >= @LIBXSLT_MIN_VERSION@
+Requires: mozilla-nss-devel >= @NSS_MIN_VERSION@
+Requires: zlib-devel 
+
+%description nss-devel
+Libraries, includes, etc. for developing XML Security applications with NSS
+
+
 %prep
 %setup -q
 
@@ -83,8 +110,10 @@ rm -rf $RPM_BUILD_ROOT
 %doc AUTHORS ChangeLog NEWS README Copyright
 %doc %{_mandir}/man1/xmlsec.1*  
 
-%{prefix}/lib/lib*.so.*
-%{prefix}/lib/lib*.so
+%{prefix}/lib/libxmlsec.so.*
+%{prefix}/lib/libxmlsec.so
+%{prefix}/lib/libxmlsec-openssl.so.*
+%{prefix}/lib/libxmlsec-openssl.so
 %{prefix}/bin/xmlsec
 
 %files devel
@@ -94,8 +123,22 @@ rm -rf $RPM_BUILD_ROOT
 %doc %{_mandir}/man1/xmlsec-config.1*  
 %doc docs/* 
 %{prefix}/bin/xmlsec-config
-%{prefix}/include/*
-%{prefix}/lib/*a
+%{prefix}/include/xmlsec/*.h
+%{prefix}/include/xmlsec/openssl/*.h
+%{prefix}/lib/libxmlsec.*a
+%{prefix}/lib/libxmlsec-openssl.*a
 %{prefix}/lib/pkgconfig/xmlsec.pc
+
+%files nss
+%defattr(-, root, root)  
+
+%{prefix}/lib/libxmlsec-nss.so.*
+%{prefix}/lib/libxmlsec-nss.so
+
+%files nss-devel
+%defattr(-, root, root)  
+
+%{prefix}/include/xmlsec/nss/*.h
+%{prefix}/lib/libxmlsec-nss.*a
 
 %changelog
