--- a/xmlsec-config.in
+++ b/xmlsec-config.in
@@ -15,6 +15,7 @@ Known values for OPTION are:
   --exec-prefix=DIR	change XMLSEC executable prefix [default $exec_prefix]
   --libs		print library linking information
   --cflags		print pre-processor and compiler flags
+  --crypto		print the default crypto library name
   --help		display this help and exit
   --version		output version information
 EOF
@@ -63,7 +64,12 @@ do
 	echo @VERSION@
 	exit 0
 	;;
-
+    
+    --crypto)
+	echo @XMLSEC_CRYPTO@
+	exit 0
+	;;
+	
     --help)
 	usage 0
 	;;
@@ -75,7 +81,7 @@ do
     --libs)
        	libs=true
        	;;
-
+    
     *)
 	usage 1
 	;;
@@ -90,8 +96,8 @@ if test "@LIBXSLT_WITHOUT@" = "no"; then
     the_xslt_libs="`@LIBXSLT_CONFIG@ --libs`"
 fi    
 
-the_flags="$the_flags @XMLSEC_DEFINES@ -I${prefix}/include -I${prefix}/include/xmlsec `@LIBXML_CONFIG@ --cflags` $the_xslt_flags @OPENSSL_CFLAGS@"
-the_libs="$the_libs -L${exec_prefix}/lib -lxmlsec `@LIBXML_CONFIG@ --libs` $the_xslt_libs @OPENSSL_LIBS@"
+the_flags="$the_flags @XMLSEC_DEFINES@ -I${prefix}/include -I${prefix}/include/xmlsec `@LIBXML_CONFIG@ --cflags` $the_xslt_flags @XMLSEC_CRYPTO_CFLAGS@ -DXMLSEC_CRYPTO=\"@XMLSEC_CRYPTO@\""
+the_libs="$the_libs -L${exec_prefix}/lib -l@XMLSEC_CRYPTO_LIB@ -lxmlsec `@LIBXML_CONFIG@ --libs` $the_xslt_libs @XMLSEC_CRYPTO_LIBS@"
 
 if $cflags; then
     all_flags="$the_flags"
