--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -90,7 +90,7 @@ LDFLAGS = $(LDFLAGS) /OPT:NOWIN98
 
 # configurable options
 !if "$(WITH_OPENSSL096)" == "1"
-CFLAGS = $(CFLAGS) /DXMLSEC_NO_AES=1 /DXMLSEC_OPENSSL_096=1
+CFLAGS = $(CFLAGS) /DXMLSEC_NO_AES=1 /DXMLSEC_OPENSSL096=1
 !endif
 !if "$(WITH_LIBXSLT)" == "1"
 !else 
