--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -31,7 +31,7 @@ AUTOCONF = .\configure.txt
 #XMLSEC_MICRO_VERSION = 0 # set this to the right value.
 #WITH_XMLSEC_DEBUG = 1
 #DEBUG = 0
-#WITH_OPENSSL096=0
+#WITH_CRYPTO=openssl
 #WITH_LIBXSLT=1
 #STATIC = 0
 #PREFIX = . # set this to the right value.
@@ -54,10 +54,41 @@ XMLSEC_IMP = $(XMLSEC_BASENAME).lib
 XMLSEC_DEF = $(XMLSEC_BASENAME).def
 XMLSEC_A = $(XMLSEC_BASENAME)_a.lib
 
+# configurable options
+!if "$(WITH_LIBXSLT)" == "1"
+!else 
+CFLAGS = $(CFLAGS) /DXMLSEC_NO_XSLT=1
+!endif
+
+!if "$(WITH_CRYPTO)" == "openssl"
+XMLSEC_CRYPTO = "openssl"
+XMLSEC_CRYPTO_SRCDIR = $(XMLSEC_SRCDIR)\openssl
+XMLSEC_CRYPTO_CFLAGS = /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl\""
+XMLSEC_CRYPTO_SOLIBS = libeay32.lib wsock32.lib user32.lib gdi32.lib
+XMLSEC_CRYPTO_ALIBS  = libeay32.lib wsock32.lib user32.lib gdi32.lib
+!endif
+
+!if "$(WITH_CRYPTO)" == "openssl_096"
+XMLSEC_CRYPTO = "openssl"
+XMLSEC_CRYPTO_SRCDIR = $(XMLSEC_SRCDIR)\openssl
+XMLSEC_CRYPTO_CFLAGS = /D "XMLSEC_OPENSSL_096"  /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl\""
+XMLSEC_CRYPTO_SOLIBS = libeay32.lib wsock32.lib user32.lib gdi32.lib
+XMLSEC_CRYPTO_ALIBS  = libeay32_a.lib wsock32.lib user32.lib gdi32.lib
+!endif
+
+!if "$(WITH_CRYPTO)" == "nss"
+XMLSEC_CRYPTO = "nss"
+XMLSEC_CRYPTO_SRCDIR = $(XMLSEC_SRCDIR)\nss
+XMLSEC_CRYPTO_CFLAGS = /D "XMLSEC_CRYPTO_NSS" /D "XMLSEC_CRYPTO=\"nss\""
+XMLSEC_CRYPTO_SOLIBS = nss3.lib nspr4.lib plds4.lib plc4.lib
+XMLSEC_CRYPTO_ALIBS  = nss3.lib nspr4.lib plds4.lib plc4.lib
+!endif
+
 # Places where intermediate files produced by the compiler go
 XMLSEC_INTDIR = $(XMLSEC_BASENAME).int
 XMLSEC_INTDIR_A = $(XMLSEC_BASENAME)_a.int
-APPS_INTDIR = apps.int
+XMLSEC_APPS_INTDIR = apps.int
+XMLSEC_APPS_INTDIR_A = apps_a.int
 
 # The preprocessor and its options.
 CPP = cl.exe /EP
@@ -65,7 +96,7 @@ CPPFLAGS = /nologo
 
 # The compiler and its options.
 CC = cl.exe
-CFLAGS = /nologo /D "WIN32" /D "_WINDOWS" /D "_MBCS" /W1 /MD 
+CFLAGS = /nologo /D "WIN32" /D "_WINDOWS" /D "_MBCS" /W1 /MD $(XMLSEC_CRYPTO_CFLAGS)
 CFLAGS = $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include /I$(XMLSEC_SRCDIR)
 CFLAGS = $(CFLAGS) /I$(INCPREFIX)
 
@@ -73,7 +104,7 @@ CFLAGS = $(CFLAGS) /I$(INCPREFIX)
 LD = link.exe
 LDFLAGS = /nologo 
 LDFLAGS = $(LDFLAGS) /LIBPATH:$(BINDIR) /LIBPATH:$(LIBPREFIX)
-LIBS = libeay32.lib wsock32.lib
+LIBS = 
 
 # The archiver and its options.
 AR = lib.exe
@@ -88,41 +119,35 @@ CFLAGS = $(CFLAGS) /D "NDEBUG" /O2
 LDFLAGS = $(LDFLAGS) /OPT:NOWIN98
 !endif
 
-# configurable options
-!if "$(WITH_OPENSSL096)" == "1"
-CFLAGS = $(CFLAGS) /DXMLSEC_NO_AES=1 /DXMLSEC_OPENSSL096=1
-!endif
-!if "$(WITH_LIBXSLT)" == "1"
-!else 
-CFLAGS = $(CFLAGS) /DXMLSEC_NO_XSLT=1
-!endif
+# xmlsec apps object files.
+XMLSEC_APPS_OBJS = \
+	$(XMLSEC_APPS_INTDIR)\crypto.obj\
+	$(XMLSEC_APPS_INTDIR)\xmlsec.obj
 
+# static xmlsec apps object files.
+XMLSEC_APPS_OBJS_A = \
+	$(XMLSEC_APPS_INTDIR_A)\crypto.obj\
+	$(XMLSEC_APPS_INTDIR_A)\xmlsec.obj
 
 # xmlsec object files.
-XMLSEC_OBJS = $(XMLSEC_INTDIR)\aes.obj\
+XMLSEC_BASE_OBJS = \
 	$(XMLSEC_INTDIR)\base64.obj\
-	$(XMLSEC_INTDIR)\bn.obj \
-	$(XMLSEC_INTDIR)\buffered.obj \
+	$(XMLSEC_INTDIR)\buffer.obj \
 	$(XMLSEC_INTDIR)\c14n.obj \
-	$(XMLSEC_INTDIR)\ciphers.obj \
 	$(XMLSEC_INTDIR)\debug.obj \
-	$(XMLSEC_INTDIR)\des.obj \
-	$(XMLSEC_INTDIR)\digests.obj \
-	$(XMLSEC_INTDIR)\dsa.obj \
 	$(XMLSEC_INTDIR)\enveloped.obj \
 	$(XMLSEC_INTDIR)\errors.obj \
-	$(XMLSEC_INTDIR)\hmac.obj \
 	$(XMLSEC_INTDIR)\io.obj \
 	$(XMLSEC_INTDIR)\keyinfo.obj \
 	$(XMLSEC_INTDIR)\keys.obj \
+	$(XMLSEC_INTDIR)\keysdata.obj \
 	$(XMLSEC_INTDIR)\keysmngr.obj \
+	$(XMLSEC_INTDIR)\list.obj \
 	$(XMLSEC_INTDIR)\membuf.obj \
 	$(XMLSEC_INTDIR)\nodeset.obj \
-	$(XMLSEC_INTDIR)\ripemd160.obj \
-	$(XMLSEC_INTDIR)\rsa.obj \
-	$(XMLSEC_INTDIR)\sha1.obj \
+	$(XMLSEC_INTDIR)\strings.obj \
+	$(XMLSEC_INTDIR)\templates.obj \
 	$(XMLSEC_INTDIR)\transforms.obj \
-	$(XMLSEC_INTDIR)\x509.obj \
 	$(XMLSEC_INTDIR)\xmldsig.obj \
 	$(XMLSEC_INTDIR)\xmlenc.obj \
 	$(XMLSEC_INTDIR)\xmlsec.obj \
@@ -131,30 +156,24 @@ XMLSEC_OBJS = $(XMLSEC_INTDIR)\aes.obj\
 	$(XMLSEC_INTDIR)\xslt.obj 
 
 # static xmlsec object files.
-XMLSEC_OBJS_A = $(XMLSEC_INTDIR_A)\aes.obj\
+XMLSEC_BASE_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\base64.obj\
-	$(XMLSEC_INTDIR_A)\bn.obj \
-	$(XMLSEC_INTDIR_A)\buffered.obj \
+	$(XMLSEC_INTDIR_A)\buffer.obj \
 	$(XMLSEC_INTDIR_A)\c14n.obj \
-	$(XMLSEC_INTDIR_A)\ciphers.obj \
 	$(XMLSEC_INTDIR_A)\debug.obj \
-	$(XMLSEC_INTDIR_A)\des.obj \
-	$(XMLSEC_INTDIR_A)\digests.obj \
-	$(XMLSEC_INTDIR_A)\dsa.obj \
 	$(XMLSEC_INTDIR_A)\enveloped.obj \
 	$(XMLSEC_INTDIR_A)\errors.obj \
-	$(XMLSEC_INTDIR_A)\hmac.obj \
 	$(XMLSEC_INTDIR_A)\io.obj \
 	$(XMLSEC_INTDIR_A)\keyinfo.obj \
 	$(XMLSEC_INTDIR_A)\keys.obj \
+	$(XMLSEC_INTDIR_A)\keysdata.obj \
 	$(XMLSEC_INTDIR_A)\keysmngr.obj \
+	$(XMLSEC_INTDIR_A)\list.obj \
 	$(XMLSEC_INTDIR_A)\membuf.obj \
 	$(XMLSEC_INTDIR_A)\nodeset.obj \
-	$(XMLSEC_INTDIR_A)\ripemd160.obj \
-	$(XMLSEC_INTDIR_A)\rsa.obj \
-	$(XMLSEC_INTDIR_A)\sha1.obj \
+	$(XMLSEC_INTDIR_A)\strings.obj \
+	$(XMLSEC_INTDIR_A)\templates.obj \
 	$(XMLSEC_INTDIR_A)\transforms.obj \
-	$(XMLSEC_INTDIR_A)\x509.obj \
 	$(XMLSEC_INTDIR_A)\xmldsig.obj \
 	$(XMLSEC_INTDIR_A)\xmlenc.obj \
 	$(XMLSEC_INTDIR_A)\xmlsec.obj \
@@ -163,31 +182,117 @@ XMLSEC_OBJS_A = $(XMLSEC_INTDIR_A)\aes.obj\
 	$(XMLSEC_INTDIR_A)\xslt.obj 
 
 
+# xmlsec-openssl object files.
+XMLSEC_OPENSSL_OBJS = \
+	$(XMLSEC_INTDIR)\app.obj\
+	$(XMLSEC_INTDIR)\bn.obj \
+	$(XMLSEC_INTDIR)\ciphers.obj \
+	$(XMLSEC_INTDIR)\crypto.obj \
+	$(XMLSEC_INTDIR)\digests.obj \
+	$(XMLSEC_INTDIR)\evp.obj \
+	$(XMLSEC_INTDIR)\hmac.obj \
+	$(XMLSEC_INTDIR)\kt_rsa.obj \
+	$(XMLSEC_INTDIR)\kw_aes.obj \
+	$(XMLSEC_INTDIR)\kw_des.obj \
+	$(XMLSEC_INTDIR)\signatures.obj \
+	$(XMLSEC_INTDIR)\symkeys.obj \
+	$(XMLSEC_INTDIR)\x509.obj \
+	$(XMLSEC_INTDIR)\x509vfy.obj 
+
+# static xmlsec-openssl object files.
+XMLSEC_OPENSSL_OBJS_A = \
+	$(XMLSEC_INTDIR_A)\app.obj\
+	$(XMLSEC_INTDIR_A)\bn.obj \
+	$(XMLSEC_INTDIR_A)\ciphers.obj \
+	$(XMLSEC_INTDIR_A)\crypto.obj \
+	$(XMLSEC_INTDIR_A)\digests.obj \
+	$(XMLSEC_INTDIR_A)\evp.obj \
+	$(XMLSEC_INTDIR_A)\hmac.obj \
+	$(XMLSEC_INTDIR_A)\kt_rsa.obj \
+	$(XMLSEC_INTDIR_A)\kw_aes.obj \
+	$(XMLSEC_INTDIR_A)\kw_des.obj \
+	$(XMLSEC_INTDIR_A)\signatures.obj \
+	$(XMLSEC_INTDIR_A)\symkeys.obj \
+	$(XMLSEC_INTDIR_A)\x509.obj \
+	$(XMLSEC_INTDIR_A)\x509vfy.obj 
+
+# xmlsec-nss object files.
+XMLSEC_NSS_OBJS = \
+	$(XMLSEC_INTDIR)\app.obj\
+	$(XMLSEC_INTDIR)\ciphers.obj \
+	$(XMLSEC_INTDIR)\crypto.obj \
+	$(XMLSEC_INTDIR)\digests.obj \
+	$(XMLSEC_INTDIR)\hmac.obj \
+	$(XMLSEC_INTDIR)\symkeys.obj
+
+# static xmlsec-nss object files.
+XMLSEC_NSS_OBJS_A = \
+	$(XMLSEC_INTDIR_A)\app.obj\
+	$(XMLSEC_INTDIR_A)\ciphers.obj \
+	$(XMLSEC_INTDIR_A)\crypto.obj \
+	$(XMLSEC_INTDIR_A)\digests.obj \
+	$(XMLSEC_INTDIR_A)\hmac.obj \
+	$(XMLSEC_INTDIR_A)\symkeys.obj
+
+!if "$(WITH_CRYPTO)" == "openssl"
+XMLSEC_OBJS = $(XMLSEC_BASE_OBJS) $(XMLSEC_OPENSSL_OBJS)
+XMLSEC_OBJS_A = $(XMLSEC_BASE_OBJS_A) $(XMLSEC_OPENSSL_OBJS_A)
+!endif
+
+!if "$(WITH_CRYPTO)" == "openssl_096"
+XMLSEC_OBJS = $(XMLSEC_BASE_OBJS) $(XMLSEC_OPENSSL_OBJS)
+XMLSEC_OBJS_A = $(XMLSEC_BASE_OBJS_A) $(XMLSEC_OPENSSL_OBJS_A)
+!endif
+
+!if "$(WITH_CRYPTO)" == "nss"
+XMLSEC_OBJS = $(XMLSEC_BASE_OBJS) $(XMLSEC_NSS_OBJS)
+XMLSEC_OBJS_A = $(XMLSEC_BASE_OBJS_A) $(XMLSEC_NSS_OBJS_A)
+!endif
+
+SOLIBS = $(LIBS) libxml2.lib $(XMLSEC_CRYPTO_SOLIBS)
+ALIBS = $(LIBS) libxml2_a.lib $(XMLSEC_CRYPTO_ALIBS)
+!if "$(WITH_ICONV)" == "1"
+SOLIBS = $(SOLIBS) iconv.lib
+ALIBS = $(ALIBS) iconv_a.lib
+!endif
+!if "$(WITH_LIBXSLT)" == "1"
+SOLIBS = $(SOLIBS) libxslt.lib
+ALIBS = $(ALIBS) libxslt_a.lib
+!endif
 
 # XmlSec and friends executables.
+!if "$(STATIC)" == "1"
+APPS = $(BINDIR)\xmlseca.exe
+APPLIBS = $(ALIBS) 
+!else
 APPS = $(BINDIR)\xmlsec.exe
+APPLIBS = $(SOLIBS)
+!endif
 
 all : xmlsec xmlseca apps
 
-xmlsec : $(BINDIR)\$(XMLSEC_SO) 
+xmlsec : $(XMLSEC_APPS_INTDIR) $(BINDIR)\$(XMLSEC_SO) 
 
-xmlseca : $(BINDIR)\$(XMLSEC_A)
+xmlseca :  $(XMLSEC_APPS_INTDIR_A) $(BINDIR)\$(XMLSEC_A)
 
 apps : $(APPS)
 
 clean :
 	if exist $(XMLSEC_INTDIR) rmdir /S /Q $(XMLSEC_INTDIR)
 	if exist $(XMLSEC_INTDIR_A) rmdir /S /Q $(XMLSEC_INTDIR_A)
-	if exist $(APPS_INTDIR) rmdir /S /Q $(APPS_INTDIR)
+	if exist $(XMLSEC_APPS_INTDIR) rmdir /S /Q $(XMLSEC_APPS_INTDIR)
+	if exist $(XMLSEC_APPS_INTDIR_A) rmdir /S /Q $(XMLSEC_APPS_INTDIR_A)
 	if exist $(BINDIR) rmdir /S /Q $(BINDIR)
 
 rebuild : clean all
 
 install : all
 	if not exist $(INCPREFIX)\$(XMLSEC_NAME) mkdir $(INCPREFIX)\$(XMLSEC_NAME)
+	if not exist $(INCPREFIX)\$(XMLSEC_NAME)\$(XMLSEC_CRYPTO) mkdir $(INCPREFIX)\$(XMLSEC_NAME)\$(XMLSEC_CRYPTO)
 	if not exist $(BINPREFIX) mkdir $(BINPREFIX)
 	if not exist $(LIBPREFIX) mkdir $(LIBPREFIX)
 	copy $(BASEDIR)\include\$(XMLSEC_NAME)\*.h $(INCPREFIX)\$(XMLSEC_NAME)
+	copy $(BASEDIR)\include\$(XMLSEC_NAME)\$(XMLSEC_CRYPTO)\*.h $(INCPREFIX)\$(XMLSEC_NAME)\$(XMLSEC_CRYPTO)
 	copy $(BINDIR)\$(XMLSEC_SO) $(SOPREFIX)
 	copy $(BINDIR)\$(XMLSEC_A) $(LIBPREFIX)
 	copy $(BINDIR)\$(XMLSEC_IMP) $(LIBPREFIX)
@@ -215,13 +320,26 @@ $(XMLSEC_INTDIR_A) :
 	if not exist $(XMLSEC_INTDIR_A) mkdir $(XMLSEC_INTDIR_A)
 
 # An implicit rule for xmlsec compilation.
+{$(APPS_SRCDIR)}.c{$(XMLSEC_APPS_INTDIR)}.obj::
+	$(CC) $(CFLAGS) /Fo$(XMLSEC_APPS_INTDIR)\ /c $<
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_INTDIR)}.obj::
 	$(CC) $(CFLAGS) /Fo$(XMLSEC_INTDIR)\ /c $<
 
+{$(XMLSEC_CRYPTO_SRCDIR)}.c{$(XMLSEC_INTDIR)}.obj::
+	$(CC) $(CFLAGS) /Fo$(XMLSEC_INTDIR)\ /c $<
+
 # An implicit rule for static xmlsec compilation.
+{$(APPS_SRCDIR)}.c{$(XMLSEC_APPS_INTDIR_A)}.obj::
+	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
+		$(CFLAGS) /Fo$(XMLSEC_APPS_INTDIR_A)\ /c $<
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_INTDIR_A)}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
 		$(CFLAGS) /Fo$(XMLSEC_INTDIR_A)\ /c $<
+
+{$(XMLSEC_CRYPTO_SRCDIR)}.c{$(XMLSEC_INTDIR_A)}.obj::
+	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
+		$(CFLAGS) /Fo$(XMLSEC_INTDIR_A)\ /c $<
+
 
 # Compiles xmlsec source. Uses the implicit rule for commands.
 $(XMLSEC_OBJS) : $(XMLSEC_INTDIR)
@@ -232,15 +350,7 @@ $(XMLSEC_OBJS_A) : $(XMLSEC_INTDIR_A)
 # Creates the export definition file (DEF) for xmlsec.
 $(XMLSEC_INTDIR)\$(XMLSEC_DEF) : $(XMLSEC_INTDIR) $(XMLSEC_DEF).src
 	$(CPP) $(CPPFLAGS) $(XMLSEC_DEF).src > $(XMLSEC_INTDIR)\$(XMLSEC_DEF)
-
 # Creates the xmlsec shared object.
-SOLIBS = $(LIBS) libxml2.lib
-!if "$(WITH_ICONV)" == "1"
-SOLIBS = $(SOLIBS) iconv.lib
-!endif
-!if "$(WITH_LIBXSLT)" == "1"
-SOLIBS = $(SOLIBS) libxslt.lib
-!endif
 $(BINDIR)\$(XMLSEC_SO) : $(BINDIR) $(XMLSEC_OBJS) $(XMLSEC_INTDIR)\$(XMLSEC_DEF)
 	$(LD) $(LDFLAGS) /DLL /DEF:$(XMLSEC_INTDIR)\$(XMLSEC_DEF) \
 		/VERSION:$(XMLSEC_VERSION_MAJOR).$(XMLSEC_VERSION_MINOR) \
@@ -253,35 +363,20 @@ $(BINDIR)\$(XMLSEC_A) : $(BINDIR) $(XMLSEC_OBJS_A)
 
 
 # Creates the apps intermediate directory.
-$(APPS_INTDIR) :
-	if not exist $(APPS_INTDIR) mkdir $(APPS_INTDIR)
+$(XMLSEC_APPS_INTDIR) :
+	if not exist $(XMLSEC_APPS_INTDIR) mkdir $(XMLSEC_APPS_INTDIR)
+$(XMLSEC_APPS_INTDIR_A) :
+	if not exist $(XMLSEC_APPS_INTDIR_A) mkdir $(XMLSEC_APPS_INTDIR_A)
 
 # An implicit rule for xmlsec and friends.
-APPLIBS = $(LIBS)
-!if "$(STATIC)" == "1"
-APPLIBS = $(APPLIBS) libxml2_a.lib
-!if "$(WITH_LIBXSLT)" == "1"
-APPLIBS = $(APPLIBS) libxslt_a.lib
-!endif
-!if "$(WITH_ICONV)" == "1"
-APPLIBS = $(APPLIBS) iconv.lib
-!endif
-{$(APPS_SRCDIR)}.c{$(BINDIR)}.exe:
-	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
-		$(CFLAGS) /Fo$(APPS_INTDIR)\ /c $< 
-	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_A) $(APPLIBS) $(APPS_INTDIR)\$(<B).obj
-!else
-APPLIBS = $(APPLIBS) libxml2.lib
-!if "$(WITH_LIBXSLT)" == "1"
-APPLIBS = $(APPLIBS) libxslt.lib
-!endif
-{$(APPS_SRCDIR)}.c{$(BINDIR)}.exe:
-	$(CC) $(CFLAGS) /Fo$(APPS_INTDIR)\ /c $< 
-	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_IMP) $(APPLIBS) $(APPS_INTDIR)\$(<B).obj
-!endif
+$(BINDIR)\xmlseca.exe: $(BINDIR) $(XMLSEC_APPS_OBJS_A)
+	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_A) $(APPLIBS) $(XMLSEC_APPS_OBJS_A)
+
+$(BINDIR)\xmlsec.exe: $(BINDIR) $(XMLSEC_APPS_OBJS)
+	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_IMP) $(APPLIBS) $(XMLSEC_APPS_OBJS)
 
 # Builds xmlsec and friends. Uses the implicit rule for commands.
-$(APPS) : $(APPS_INTDIR) $(BINDIR) xmlsec xmlseca
+$(APPS) : $(BINDIR) xmlsec xmlseca
 
 # Source dependences should be autogenerated somehow here, but how to
 # do it? I have no clue.
