new docs makefiles

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,11 +22,33 @@ EXTRA_DIST = \
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = xmlsec.pc
 
-api-doc:
-	@cd docs/api;make
+api-docs: create-api-docs format-docs
+	
+
+create-api-docs:
+	@cd docs/api; \
+	make;\
+	echo "Cleaning up result files"; \
+	perl ../../scripts/remove-gtkdoclink.pl `find . -name "*.html" -print`
 
 api-doc-clean:
 	@cd docs/api;make clean
+
+format-docs:
+	@(echo "Formatting html documents"; \
+	for i in `find docs -name "*.html" -print`; \
+	do \
+	    echo "Processing $$i"; \
+	    top_folder=`echo $$i | sed 's#/[^/]*$$#/#' | \
+			sed 's#/[^/]*/#/../#g' | sed 's#docs/##'`; \
+	    xsltproc --html --stringparam topfolder "$$top_folder" \
+		     --output $$i scripts/xmlsec.xsl $$i; \
+	    if [ $$? != 0 ]; \
+	    then \
+		echo "ERROR: processing file $$i"; \
+		exit 1; \
+	    fi; \
+	done)
 
 check-km: $(TEST_APP)
 	@cd tests;make check-km
